--- a/index.html
+++ b/index.html
@@ -116,22 +116,12 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-apartment.png" alt="Icon">
                                 </div>
-                                <h6>Predict Land Price</h6>
-                                <span>123 Properties</span>
+                                <h6>Click here to predict price</h6>
+                                <span>More than 100+ Properties</span>
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-6 col-sm-10 wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" a href="https://real-estate-8lo5.onrender.com">
-                            <div class="rounded p-4">
-                                <div class="icon mb-3">
-                                    <img class="img-fluid" src="img/icon-villa.png" alt="Icon">
-                                </div>
-                                <h6>Predict House price</h6>
-                                <span>123 Properties</span>
-                            </div>
-                        </a>
-                    </div>
+                    
                     
                 </div>
             </div>
