--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fis1-2.housingcdn.com%2F01c16c28%2F495b1c373f4c663d8cbc88ca0c1c460d%2Fv0%2Flarge%2Fresidential_plot-for-sale-yelahanka-Bangalore-plot_view.jpg&tbnid=ddsN2NzaCBCtyM&vet=12ahUKEwiez4qgrdH-AhUyFLcAHX0YBVEQMygBegUIARClAQ..i&imgrefurl=https%3A%2F%2Fhousing.com%2Fin%2Fbuy%2Fresale%2Fpage%2F11434880-residential-plot-in-yelahanka-for-rs-1440000&docid=LNx7WxAQVA8SmM&w=720&h=405&q=yelahanka%20land&ved=2ahUKEwiez4qgrdH-AhUyFLcAHX0YBVEQMygBegUIARClAQ" alt="">
+                            <img class="img-fluid" src="https://is1-2.housingcdn.com/01c16c28/495b1c373f4c663d8cbc88ca0c1c460d/v0/large/residential_plot-for-sale-yelahanka-Bangalore-plot_view.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carousel-2.jpg" alt="">
