--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="https://is1-2.housingcdn.com/01c16c28/495b1c373f4c663d8cbc88ca0c1c460d/v0/large/residential_plot-for-sale-yelahanka-Bangalore-plot_view.jpg" alt="">
+                            <img class="img-fluid" src="" alt="">
                         </div>
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carousel-2.jpg" alt="">
