--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="" alt="">
+                            <img class="img-fluid" src="img/1.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carousel-2.jpg" alt="">
