--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
                         </div>
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carousel-2.jpg" alt="">
-                        </div>
-                        
-                        
+                        </div>                     
                     </div>
                 </div>
             </div>
@@ -119,6 +117,17 @@
                                     <img class="img-fluid" src="img/icon-apartment.png" alt="Icon">
                                 </div>
                                 <h6>Click here to predict price</h6>
+                                <span>More than 100+ Properties</span>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-6 col-sm-10 wow fadeInUp" data-wow-delay="0.1s">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" a href="property-agent.html">
+                            <div class="rounded p-4">
+                                <div class="icon mb-3">
+                                    <img class="img-fluid" src="img/icon-apartment.png" alt="Icon">
+                                </div>
+                                <h6>Click here to contact Agents</h6>
                                 <span>More than 100+ Properties</span>
                             </div>
                         </a>
