--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     <img class="img-fluid" src="img/icon-apartment.png" alt="Icon">
                                 </div>
                                 <h6>Click here to contact Agents</h6>
-                                
+                                <span>Contact with our certified Agents</span>
                             </div>
                         </a>
                     </div>
