--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/1.jpeg" alt="">
+                            <img class="img-fluid" src="https://media.gettyimages.com/id/841544674/photo/aerial-view-in-bangalore-on-february-15-2015-in-india.jpg?s=612x612&w=0&k=20&c=BsBSJUi9aMuMw-_TM9FzzV1ymQq9zFmFlf2ScW2-zFI=" alt="">
                         </div>
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carousel-2.jpg" alt="">
