--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="img/property-3.jpg" alt=""></a>
+                                        <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/841544674/photo/aerial-view-in-bangalore-on-february-15-2015-in-india.jpg?s=612x612&w=0&k=20&c=BsBSJUi9aMuMw-_TM9FzzV1ymQq9zFmFlf2ScW2-zFI=" alt=""></a>
                                         <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">Land</div>
                                         <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Land</div>
                                     </div>
@@ -248,7 +248,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="img/property-4.jpg" alt=""></a>
+                                        <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/841544674/photo/aerial-view-in-bangalore-on-february-15-2015-in-india.jpg?s=612x612&w=0&k=20&c=BsBSJUi9aMuMw-_TM9FzzV1ymQq9zFmFlf2ScW2-zFI=" alt=""></a>
                                         <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Rent</div>
                                         <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Building</div>
                                     </div>
@@ -267,7 +267,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="img/property-5.jpg" alt=""></a>
+                                        <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/841544674/photo/aerial-view-in-bangalore-on-february-15-2015-in-india.jpg?s=612x612&w=0&k=20&c=BsBSJUi9aMuMw-_TM9FzzV1ymQq9zFmFlf2ScW2-zFI=" alt=""></a>
                                         <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Sell</div>
                                         <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Home</div>
                                     </div>
@@ -286,7 +286,7 @@
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" src="img/property-6.jpg" alt=""></a>
+                                        <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/841544674/photo/aerial-view-in-bangalore-on-february-15-2015-in-india.jpg?s=612x612&w=0&k=20&c=BsBSJUi9aMuMw-_TM9FzzV1ymQq9zFmFlf2ScW2-zFI=" alt=""></a>
                                         <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Rent</div>
                                         <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Shop</div>
                                     </div>
