--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
                                         <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/1331216312/photo/the-golden-light-of-sunset-reflecting-off-the-cobblestone-courtyard-next-to-the-main-temple.jpg?s=612x612&w=0&k=20&c=AAp2mozRMrWMIRbrXZHO_uVfLfVmyFxnZ8ozSZeh3WQ=" alt=""></a>
-                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">House</div>
+                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Lease</div>
                                         <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">House</div>
                                     </div>
                                     <div class="p-4 pb-0">
@@ -208,8 +208,8 @@
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
                                         <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/1299556964/photo/high-angle-view-of-buildings-against-sky.jpg?s=612x612&w=0&k=20&c=xgRDMlBSrM65x-EMXyj9WWSqAkmNeAcy445VeEd0Y1M=" alt=""></a>
-                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">Land</div>
-                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Loading</div>
+                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Sale</div>
+                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">House</div>
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">Rs.46.6 Lakhs</h5>
@@ -227,8 +227,8 @@
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
                                         <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/90566002/photo/view-of-colonial-bungalow-in-ooty-and-masanumkudi-wild-owns-and-runs-by-junaid-and-ambareen-in.jpg?s=612x612&w=0&k=20&c=9hBhdDh-o05wuZwZbYVuXDqFAwslz7_pa_xmHkb5FM0=" alt=""></a>
-                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">Land</div>
-                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Land</div>
+                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Sale</div>
+                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">House</div>
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">Rs. 98.46 lakhs</h5>
@@ -246,8 +246,8 @@
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
                                         <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/521690021/photo/south-indian-houses.jpg?s=612x612&w=0&k=20&c=hylfQ5FJ8dNYbBYsIjbECK4aAUoDfu41rJj9l4_Fr9I=" alt=""></a>
-                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Rent</div>
-                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Building</div>
+                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Sale</div>
+                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">House</div>
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">Rs. 45 lakhs</h5>
@@ -265,8 +265,8 @@
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
                                         <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/521658389/photo/indian-traditional-house.jpg?s=612x612&w=0&k=20&c=XJGoFRgdyXKMAA0ULvOEjYL-QvKCOiUbM3uTxvdjKOk=" alt=""></a>
-                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Sell</div>
-                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Home</div>
+                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Sale</div>
+                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">House</div>
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">Rs 86 lakhs</h5>
@@ -284,8 +284,8 @@
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
                                         <a href=""><img class="img-fluid" src="https://media.gettyimages.com/id/841544674/photo/aerial-view-in-bangalore-on-february-15-2015-in-india.jpg?s=612x612&w=0&k=20&c=BsBSJUi9aMuMw-_TM9FzzV1ymQq9zFmFlf2ScW2-zFI=" alt=""></a>
-                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Rent</div>
-                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">Shop</div>
+                                        <div class="bg-primary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">For Sale</div>
+                                        <div class="bg-white rounded-top text-primary position-absolute start-0 bottom-0 mx-4 pt-1 px-3">House</div>
                                     </div>
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">Rs 34 lakhs</h5>
