--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                     <div class="p-4 pb-0">
                                         <h5 class="text-primary mb-3">Rs. 98.46 lakhs</h5>
                                         <a class="d-block h5 mb-2" href="">Jalahalli</a>
-                                        <p><i class="fa fa-map-marker-alt text-primary me-2"></i>Vinyas Virtue,1st main,Jalahalli,Bengaluru 560013</p>
+                                        <p><i class="fa fa-map-marker-alt text-primary me-2"></i>Vinyas Virtue,Jalahalli,Bengaluru 560013</p>
                                     </div>
                                     <div class="d-flex border-top">
                                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-ruler-combined text-primary me-2"></i>1200 Sqft</small>
