--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>9882348974</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>svce@example.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/__chaithanya____/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/__chaithanya___/"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
