--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-6 col-sm-10 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" a href="https://real-estate-wbg1.onrender.com">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" a href="https://h-l-price.onrender.com">
                             <div class="rounded p-4">
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-apartment.png" alt="Icon">
