--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6 col-sm-10 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item d-block bg-light text-center rounded p-3" a href="https://rental-price.onrender.com">
+                        <a class="cat-item d-block bg-light text-center rounded p-3" a href="https://rent-0bbb.onrender.com">
                             <div class="rounded p-4">
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-apartment.png" alt="Icon">
