--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                        <h1 class="mb-4">Predict property price all aroung bangalore</h1>
+                        <h1 class="mb-4">Predict property price all around bangalore</h1>
                         <p class="mb-4">The cost of buying a house in Bangalore can range from several lakhs to crores of rupees, depending on the location and size of the property. </p>
                         <p><i class="fa fa-check text-primary me-3"></i>Shortlist without visit</p>
                         <p><i class="fa fa-check text-primary me-3"></i>Certified Agents</p>
